fixed header image alignment and added even more assets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -206,7 +206,7 @@ body {
   padding: 0px 0px 0px 0px;
 }
 .container2 {
-  width: 105%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin:0px;
